# diffprimer

./: .gitignore  404.html  Cargo.toml  LICENSE  MATH.md  README.md  config.ini.example  index.html  make_mock.py  mkdocs.yml  objects.inv  pyproject.toml  scratch.js  sitemap.xml  test_cli.py  test_typer.py
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  how-to-use.md  index.md  math.md  report_example.html
how-to-use/: index.html
javascripts/: mathjax.js
math/: index.html
mock_results/: diffprimer_report.html  primer_design_results.csv
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/how-to-use/: index.html
site/search/: search_index.json
src/: lib.rs
src/diffprimer/: __init__.py  cli.py  config.ini  config.py  helpers.py  logs.py  main.py  report.py  test_check.py
tests/: test_integration.py
tests/data/: reference.fasta  target.fasta
