[package]
name = "diffprimer"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2.1"
num_cpus = "1.17.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
rayon = "1.11.0"
indicatif = "0.17.0"
console = "0.15"
bio = "3.0"
