[project]
name = "diffprimer"
version = "0.1.4"
description = "A tool to design primers that target specific variants in genomic sequences. Alingment-free and fast."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matheus Pimenta", email = "omatheuspimenta@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gffpandas>=1.2.0",
    "pandas>=2.3.3",
    "primer3-py>=2.3.0",
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "typer>=0.20.0",
]

[project.scripts]
diffprimer = "diffprimer.cli:app"

[tool.maturin]
module-name = "diffprimer.kmer_extractor"
python-packages = ["diffprimer"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=9.0.2",
]
docs = [
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
]
